@@ -60,6 +60,9 @@ us a note on ns-developers mailing list.</p>
 
 <h2>Changes to existing API:</h2>
 <ul>
+  <li> The documentation's IPv6 addresses (2001:db8::/32, RFC 3849) are now
+  dropped by routers.
+  </li>
   <li> The 'src/tools' module has been removed, and most files migrated to
   'src/stats'.  For users of these programs (the statistics-processing 
   in average.h, or the gnuplot support), the main change is likely to be
